# fcg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.macOS  README.md
data/models/board/: board.mtl
data/models/table/: table.mtl
data/textures/sky/: nx.hdr  nx_high.hdr  nx_low.hdr  ny.hdr  ny_high.hdr  ny_low.hdr  nz.hdr  nz_high.hdr  nz_low.hdr  px.hdr  px_high.hdr  px_low.hdr  py.hdr  py_high.hdr  py_low.hdr  pz.hdr  pz_high.hdr  pz_low.hdr
include/: animation.hpp  camera.hpp  chess_game.hpp  chess_renderer.hpp  collisions.hpp  gpu.hpp  hud.hpp  input.hpp  math_constants.hpp  matrices.hpp  object.hpp  state.hpp  textrendering.hpp  utils.h  window.hpp
include/states/: base.hpp  game.hpp  loading.hpp  menu.hpp
src/: animation.cpp  camera.cpp  chess_game.cpp  chess_renderer.cpp  collisions.cpp  gpu.cpp  hud.cpp  input.cpp  main.cpp  matrices.cpp  object.cpp  shader_fragment.glsl  shader_vertex.glsl  state.cpp  textrendering.cpp  window.cpp
src/states/: base.cpp  game.cpp  loading.cpp  menu.cpp
